5/2/2013
---------------------------
- KO Added setup.cfg so that `python setup_library.py install` installs to the correct dir.
- KO Changed line editing mode to allow point selection when shift is held down

4/14/2013
---------------------------
- KO Refactored layer rendering logic into a new class LayerRendererOpenGL
- KO Fixed #471 (Enable MapRoom to Edit Soundings in a .VERDAT)

4/12/2013
---------------------------
- KO Refactored the logic for creating map elements from Application.py into MapController.py
- KO Refactored, and when possible removed, some layering violations caused by app_global references
- KO Changed modeless dialogs so that they are always destroyed when closed, or raised if opened
- KO Changed Layer_manager's layers to be instance-specific, rather than a static global
- KO Added File -> New Map to allow MapRoom to open multiple maps in one session

4/11/2013
---------------------------
- KO fixed #501 ("Merge Duplicate Points" Dialog Doesn't Find Duplicate Points)
- KO Changed the layer colors to match the colors used by Dan's build.
- KO Restored the properties panel behavior when selecting points to match Dan's build.

4/4/2013
---------------------------
- KO fixed #474 (Change zoom-on-scroll rate)
- KO fixed #497, for real this time :)
- KO fixed #500 (Can't Open More Than 1 Instance of MapRoom) on Windows

3/29/2013
---------------------------
- KO fixed #499 (MapRoom.exe Process Hangs After Crash Report Attempt)
- KO Fixed #498 (Deleting "...Tolerance for Duplicate Points" Values Crashes MapRoom)
- KO Fixed #497 (Manual Entries in "...Tolerance for Duplicate Points" Dialogs Don't Update Display)
- KO Fixed #496 (Merge Duplicate Points dialog too big) by removing static boxes
- KO Fixed #492 (Unable to Resize "Merge Duplicate Points" Window After Clicking "Find Duplicates")
- KO Fixed #452 (Need be able to identify duplicate points regardless of how different the depths are.)